----------------------------------------------------------------------
 OmegaT 4.1.2 update 3
----------------------------------------------------------------------
  5 Enhancements
  3 Bug fixes
  1 Localisation update
----------------------------------------------------------------------
4.1.2 update 3 vs 4.1.2 update 2

  Implemented requests:

  - Automatically unzip TMX files in /tm
  https://sourceforge.net/p/omegat/feature-requests/1339/

  - Commit target files
  https://sourceforge.net/p/omegat/feature-requests/1341/

  - Remember Statistics dialog geometry
  https://sourceforge.net/p/omegat/feature-requests/1345/

  - New segmentation rule to default set of Finnish language rules
  https://sourceforge.net/p/omegat/feature-requests/1347/

  - Allow copying support info from Help > About
  https://sourceforge.net/p/omegat/feature-requests/1351/

  Bug fixes:

  - Forced versioned /target in 4.1-compatible team projects
  https://sourceforge.net/p/omegat/bugs/863/

  - Some segmentation rule edits don't take effect when closing window
  https://sourceforge.net/p/omegat/bugs/886/

  - Tags were lost when saving TMX from Aligner

  Localisation Updates:

  - Russian localisation updated to 4.1.2 update 3 (UI, readme)

----------------------------------------------------------------------
 OmegaT 4.1.2 update 2 (2017-09-22)
----------------------------------------------------------------------
  2 Enhancements
  2 Bug fixes
  1 Localisation update
----------------------------------------------------------------------
4.1.2 update 2 vs 4.1.2 update 1

  Implemented requests:

  - Commit source files
  https://sourceforge.net/p/omegat/feature-requests/1329/

  Other enhancements:

  - The script svn_cleanup_selected.groovy was rewritten to fully support
team projects in 4.x format or work on any selected folder (recursively)

  Bug fixes:

  - segmentation.conf and filters.xml not mirrored in team projects
  https://sourceforge.net/p/omegat/bugs/864/
