@@ -486,6 +486,8 @@ TF_COMMIT_DONE=Source files committed
 TF_COMMIT_TARGET_START=Committing target files
 TF_COMMIT_TARGET_DONE=Target files committed
 
+TF_PROJECT_PROPERTIES_ERROR=Failed to update project properties
+
 MW_PROMPT_SEG_NR_MSG=Enter the segment number:
 
 MW_PROMPT_SEG_NR_TITLE=Go To Segment
@@ -2388,6 +2390,7 @@ TEAM_PREDEFINED_CREDENTIALS_ERROR=Predefined credentials was not passed.
 TEAM_REMOTE_RETRIEVE_ERROR=Error retrieve {0} as remote project file
 TEAM_REPOSITORIES_DIALOG=Repository Credentials
 TEAM_REBASE_AND_COMMIT=Synchronisation of repositories
+TEAM_OPEN=Opening team project
 
 # Save options
 SAVE_DIALOG_TITLE=Saving and Output Options
